# untex

./: .clang-format  .gitignore  CMakeLists.txt  tmux.sh
include/untex/: untex.hpp
src/: global.hpp  init.cpp  init.hpp  shaders.hpp  true_color.cpp
test/: true_color.cpp
